index.css
* {
  font-family: 'Open Sans', sans-serif;
}

html {
  height: 100vh;
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#93cede+0,75bdd1+41,49a5bf+100;Blue+3D+%235 */
  background: #93cede; /* Old browsers */
  background: -moz-linear-gradient(-45deg,  #93cede 0%, #75bdd1 41%, #49a5bf 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(-45deg,  #93cede 0%,#75bdd1 41%,#49a5bf 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(135deg,  #93cede 0%,#75bdd1 41%,#49a5bf 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

input {
  width: 60px;
  background: none;
}

button {
  color: #93cede;
  background: black;
}

input, button {
  min-height:    40px;
  min-width:     40px;
  font-size:     1em;
  font-weight:   700;
  text-align:    center;
  border-width:  3px;
  border-radius: 10px;
  border-style:  solid;
  border-color:  black;
  box-shadow:    -1px 1px black, -2px 2px black, -3px 3px black;
}

a {
  color: black;
  text-decoration: none;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

img.alignMiddle {
  vertical-align: middle;
}

.centered {
  text-align: center;
}

#drawForm {
  text-align: center;
}

#result {
  margin-top: 0;
  margin-bottom: 0;
  font-family: 'Bungee Shade', sans-serif;
  font-size: 10em;
}

/* smaller result text on mobile */
@media (min-width: 1024px) {
  #result {
    font-size: 20em;
  }
}

/* push result text up to top on mobile limited height */
@media (min-height: 568px) {
  #result {
    margin-top: 10vh;
  }
}

/* push result text up to top on mobile limited height */
@media (min-height: 1024px) {
  #result {
    margin-top: 20vh;
  }
}

/* fix number input spinner spacing on desktop */
@media (min-width: 1025px) {
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    margin-left: -10px;
  }
}

